renamed file and added analysis

--- a/PyCitySchools/PyCitySchools_Analysis.ipynb
+++ b/PyCitySchools/PyCitySchools_Analysis.ipynb
@@ -6,7 +6,11 @@
    "source": [
     "# PyCity Schools Analysis\n",
     "\n",
-    "- Your analysis here\n",
+    "- In each school, the average math and reading scores are relatively the same, however, there is a clear distinguish that there is a greater percentage (%) of students passing reading than math. Therefore, the overall passing rate, which is calculated based on the number of students passing both math and reading, is lower than the % Passing Math and % Passing Reading individually. \n",
+    "\n",
+    "- Out of the fifteen (15) schools within the scope of the analysis, the top five (5) schools based on the Overall Passing students are from Charter schools, which are smaller in size with a lower budget amount per student, and the bottom five (5) schools are District schools, which are larger in size with a higher budget amount per student. This may suggest that a smaller school size will yield a higher success rate of students passing math and reading. Also, a higher budget per student does not necessarily result in a higher overall passing rate.\n",
+    "\n",
+    "- There are no significant differences of the average math and reading scores of the students between each grade level from each school, so this suggests that the overall passing rate is equally weighed in from each grade level. \n",
     "  \n",
     "---"
    ]
